stylized portfolio, fixed horizontal scrollbar issue

--- a/css/temp1.css
+++ b/css/temp1.css
@@ -1,4 +1,3 @@
-
 body {
 	background-color: #000000;
 	color: #ffbb77;
@@ -48,13 +47,14 @@ p {
 
 .portfolio {
 	right: 0;
+	margin-top: 20px;
 	background-color: #0f0f0f;
 	display:grid;
 	grid-auto-flow: row;
 	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr 1fr;
-    overflow: auto;
-    white-space: nowrap;
+	grid-template-rows: 1fr 1fr 1fr;
+    overflow: scroll;
+	white-space: nowrap;
 }
 .portfolio > section.gamebox {
     display:flex;
@@ -62,12 +62,10 @@ p {
     justify-content:center;
  }
 .gamebox > img {
-	object-fit: fill;
  }
 img.game {
-	padding-top: 8px;
-	max-width: 23em;
-	max-height: 23em;
+	max-width: 24em;
+	max-height: 24em;
 	background-color: #000000;
 }
 .softly {
@@ -83,21 +81,10 @@ img.game {
 	background-color: #002600;
 }
 .empire2 {
-	background-color: #260016;
-}
-.mendacity2 {
 	background-color: #000c26;
 }
-.cover {
-	background-color: #002626;
-}
-#album_cover {
-	font-size: 2em;
-}
-#album_cover > a {
-	text-decoration: none;
-	color: #0088ff;
-	background-color: #002626;
+.mendacity2 {
+	background-color: #260c00;
 }
 
 #email {
